--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -555,9 +555,9 @@
         "#B) then split into train 4-5/16, test 6/16\n",
         "#C) if those two seem interesting fit model\n",
         "#D) make a regression stats function that mae, rmse, r2\n",
-        "#E) tweak to get best mae\n",
-        "#F) Stretch, make a function that will at least gather the stats of every single\n",
-        "#permutation of features in the data set."
+        "#E) Stretch, make a function that will go through every combination of features\n",
+        "#and find the best mae. This is for sure brutish, but I want to see if I can\n",
+        "#do it."
       ],
       "execution_count": 0,
       "outputs": []
@@ -1828,7 +1828,6 @@
         "outputId": "b98cde66-87a7-43ad-d0ee-db94d607ded9"
       },
       "source": [
-        "\n",
         "reg_metrics(test['price'], y_pred)"
       ],
       "execution_count": 55,
@@ -1845,39 +1844,97 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "4Jv-MhM-4W0u",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "bd975918-b076-4756-f908-7d99ce311bc2"
+        "id": "EQagLR6MF9v4",
+        "colab_type": "text"
       },
       "source": [
-        "test['price'].shape"
-      ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(16973,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 53
-        }
+        "#E Stretch goal"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OjI-oZfT-jKF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "53137c28-afe9-4356-865d-e627cc8e679b"
+      },
+      "source": [
+        "df.columns"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['bathrooms', 'bedrooms', 'created', 'description', 'display_address',\n",
+              "       'latitude', 'longitude', 'price', 'street_address', 'interest_level',\n",
+              "       'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
+              "       'doorman', 'dishwasher', 'no_fee', 'laundry_in_building',\n",
+              "       'fitness_center', 'pre-war', 'laundry_in_unit', 'roof_deck',\n",
+              "       'outdoor_space', 'dining_room', 'high_speed_internet', 'balcony',\n",
+              "       'swimming_pool', 'new_construction', 'terrace', 'exclusive', 'loft',\n",
+              "       'garden_patio', 'wheelchair_access', 'common_outdoor_space', 'perf_fit',\n",
+              "       'perf_amen', 'datetime'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OYRcI8hmGLFh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "381e14b4-4693-4109-ddef-0db192655c4c"
+      },
+      "source": [
+        "columns = ['bathrooms', 'bedrooms', 'latitude', 'longitude', 'price', \n",
+        "        'interest_level', 'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
+        "       'doorman', 'dishwasher', 'no_fee', 'laundry_in_building',\n",
+        "       'fitness_center', 'pre-war', 'laundry_in_unit', 'roof_deck',\n",
+        "       'outdoor_space', 'dining_room', 'high_speed_internet', 'balcony',\n",
+        "       'swimming_pool', 'new_construction', 'terrace', 'exclusive', 'loft',\n",
+        "       'garden_patio', 'wheelchair_access', 'common_outdoor_space', 'perf_fit',\n",
+        "       'perf_amen', 'datetime']\n",
+        "\n",
+        "len(columns)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V4-_J-9FHF7M",
         "colab_type": "code",
         "colab": {}
       },
